syntax = "proto3";
package key_value_proto;

option go_package = "github.com/Mohammed-Shammout/key_value/key_value_proto";

service key_value_service {
    rpc create(Key_Value) returns (Response) {};
    rpc update(Key_Value) returns (Response) {};
    rpc read(Key) returns (Value_Response) {};
    rpc delete(Key) returns (Response) {};
}

message Key_Value {
    int64 Key = 1;
    int64 Val = 2;
}

message Key {
    int64 Key = 1;
}

message Response {
    bool Success = 1;
}
message Value_Response {
    bool Success = 1;
    int64 Val = 2;
}

